# Facial-Recognition-App

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
data/vectordb/: faces_l2.faiss  faces_l2.pkl
docs/: index.md
docs/reference/: align.md  detect.md  identify.md  represent.md  utils.md
facial_recognition/: __init__.py  _utils.py  align.py  detect.py  identify.py  represent.py
facial_recognition_webapp/: app.js
reference/align/: index.html
reference/detect/: index.html
reference/identify/: index.html
reference/represent/: index.html
reference/utils/: index.html
scripts/: cameras.py  demo.py  demo1.py  demo2.py  preprocess_images.py
webapp/: app.py  index.html
webapp/static/: app.js  styles.css
webapp/templates/: index.html
